[package]
name = "zk-ml-private-model-arkworks"
version = "0.1.0"
authors = ["AnonymousRobotics <lianke@ucsb.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
fast-math = "0.1"

rand_chacha = "0.2.2"
rand = "0.7.3"
rand_xorshift = { version = "0.2" }
blake2 = { version = "0.8", default-features = false }
sha2 = "0.9.1"
merkle = "1.11"
ring = "0.16.15"


ark-ed-on-bls12-381 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "0.2.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-std = { version = "0.2.0", default-features = false }
ark-groth16 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-r1cs-std = { version = "0.2.0", default-features = false }
ark-serialize = { version = "0.2.0", default-features = false, features = [ "derive" ] }
ark-relations =  { version = "0.2.0", default-features = false }
ark-ff = { version = "0.2.0", default-features = false }


tracing = { version = "0.1", default-features = false, optional = true }
tracing-subscriber = { version = "0.2", default-features = false, optional = true }


num-traits = "0.2"

[dev-dependencies]
criterion = "0.3"
